--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,3 +1,12 @@
+* {
+  box-sizing: border-box;
+  html, body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+  }
+}
+
 .container {
   display: flex;
   align-items: center;
@@ -5,35 +14,45 @@
   padding: 10px 20px;
   gap: 10px;
   transition: 0.3s ease;
-  background-color: white; 
-   position: sticky;
+  background-color:wheat;
+  position: sticky;
   top: 0;
-  background: white;
   z-index: 999;
+ 
 }
+
 .head {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 28px;
+  font-size: 30px;
   font-weight: bold;
   color: rgb(219, 110, 32);
 }
+
 .Nav-link {
   display: flex;
+  align-items: center;
   gap: 20px;
- 
+  justify-content: center;
+  flex-wrap: nowrap;
+  order: 1;
+  flex: 1;
 }
+
 .Nav-link a {
-  text-decoration: none; 
+  text-decoration: none;
   font-family: inherit;
   font-size: 18px;
   font-weight: bolder;
-  color: rgb(219, 110, 32); 
+  color: rgb(219, 110, 32);
   transition: 0.3s ease;
 }
+
 .Nav-link a:hover {
-  color: #ff6600; 
+  color: #ff6600;
 }
+
 .btn button {
+  justify-content: end;
   padding: 8px 16px;
   cursor: pointer;
   border: none;
@@ -42,7 +61,9 @@
   border-radius: 8px;
   font-size: 16px;
   transition: 0.3s ease;
+
 }
+
 
 body.dark-mode {
   background-color: #121212;
@@ -57,16 +78,50 @@ body.dark-mode .container {
 body.dark-mode .head {
   color: rgb(219, 110, 32);
 }
+
 body.dark-mode .Nav-link a {
   color: rgb(219, 110, 32);
 }
+
 body.dark-mode .Nav-link a:hover {
   color: #ff6600;
 }
+
 body.dark-mode .btn button {
   background-color: rgb(219, 110, 32);
   color: white;
 }
+
 body.dark-mode .btn button:hover {
   background-color: #1b1a19;
+}
+
+
+
+
+
+@media (min-width: 600px) and (max-width: 900px) {
+  .container {
+    justify-content: space-between;
+  }
+
+  .Nav-link {
+    gap: 20px;
+      display: flex;
+  align-items: center;
+  gap: 20px;
+  justify-content: center;
+  flex-wrap: nowrap;
+  }
+
+  .head {
+    font-size: 30px;
+  }
+}
+
+
+@media (min-width: 900px) {
+  .container {
+    flex-wrap: nowrap;
+  }
 }
