--- a/src/components/FoodCard.css
+++ b/src/components/FoodCard.css
@@ -1,4 +1,4 @@
-.heading{
+.fheading{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     font-size: 45px;
@@ -16,6 +16,9 @@
   .cardcontainer {
     grid-template-columns: repeat(2, 1fr);
   }
+}
+.fheading{
+    text-align: center;
 }
 .images{
     width: 200px;
