--- a/src/Pages/CartPage.css
+++ b/src/Pages/CartPage.css
@@ -125,10 +125,15 @@ font-weight: bold;
     cursor: pointer;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 767px) {
     .cartid {
         flex-direction: column;
         align-items: flex-start;
+    
+    }
+    .cartpage{
+        margin-left: 85px;
+        
     }
 
     .itemright {
