--- a/src/Pages/MenuPage.css
+++ b/src/Pages/MenuPage.css
@@ -38,10 +38,14 @@
     margin-bottom: 10px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 767px) {
     .container {
         grid-template-columns: repeat(2, 1fr);
+       margin-left: 75px;
     }
+}
+.topbar{
+    margin-left: 75px;
 }
 
 .p {
