--- a/src/components/Category.css
+++ b/src/components/Category.css
@@ -25,7 +25,6 @@
 @media screen and (max-width: 767px) {
   .categorycont {
     grid-template-columns: repeat(2, 1fr);
-    margin-left: 40px;
   }
   .categorycont >div{
     text-align: center;
@@ -36,13 +35,14 @@
     transform: scale(1.05);
 }
 .heading{
-    margin-left: 175px;
-}
+    margin-left: 3px;
 }
 
+
 .foodimg{
-    width: 200px;
-    height: 200px;
+    width: 100%;        /* scales with parent div */
+    max-width: 150px;  /* optional max size */
+    height: auto;      /* maintain aspect ratio */
     border-radius: 10px;
     object-fit: cover;
     display: block;
@@ -51,4 +51,5 @@
 }
 .foodname{
 color: rgb(176, 80, 11);;
+}
 }
